[package]
name = "pol-im"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
# Axum
axum = {version = "0.6", features = ["macros", "headers"]}
tower-http = { version = "0.4.0", features = ["full"] }
tower-cookies = "0.9.0"
# Askama
askama = {version="0.12.0", features=["markdown"]}
# SQLx
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "macros", "time"]} 

# Serde / json and others
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
lazy-regex = "2"
async-trait = "0.1.68"
strum_macros = "0.24.3"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }

[dev-dependencies]
httpc-test = "0.1.2"
anyhow = "1.0.71"
